--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -107,6 +107,12 @@ ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprints/BP_GameMode.BP_GameMode_C
 GlobalDefaultServerGameMode=None
 
+[/Script/HardwareTargeting.HardwareTargetingSettings]
+TargetedHardwareClass=Mobile
+AppliedTargetedHardwareClass=Mobile
+DefaultGraphicsPerformance=Maximum
+AppliedDefaultGraphicsPerformance=Maximum
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -140,6 +146,8 @@ bDisableKinematicStaticPairs=False
 bDisableKinematicKinematicPairs=False
 bDisableCCD=False
 bEnableEnhancedDeterminism=False
+AnimPhysicsMinDeltaTime=0.000000
+bSimulateAnimPhysicsAfterReset=False
 MaxPhysicsDeltaTime=0.033333
 bSubstepping=False
 bSubsteppingAsync=False
@@ -148,12 +156,20 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
-[/Script/HardwareTargeting.HardwareTargetingSettings]
-TargetedHardwareClass=Mobile
-AppliedTargetedHardwareClass=Mobile
-DefaultGraphicsPerformance=Maximum
-AppliedDefaultGraphicsPerformance=Maximum
++PhysicalSurfaces=(Type=SurfaceType1,Name="Carpet")
++PhysicalSurfaces=(Type=SurfaceType2,Name="Dirt")
++PhysicalSurfaces=(Type=SurfaceType3,Name="Grass")
++PhysicalSurfaces=(Type=SurfaceType4,Name="Metal")
++PhysicalSurfaces=(Type=SurfaceType5,Name="Rock")
++PhysicalSurfaces=(Type=SurfaceType6,Name="Concrete")
++PhysicalSurfaces=(Type=SurfaceType7,Name="Wood")
++PhysicalSurfaces=(Type=SurfaceType8,Name="Gravel")
++PhysicalSurfaces=(Type=SurfaceType9,Name="Ground")
++PhysicalSurfaces=(Type=SurfaceType10,Name="Plastic")
++PhysicalSurfaces=(Type=SurfaceType11,Name="Sand")
++PhysicalSurfaces=(Type=SurfaceType12,Name="Snow")
++PhysicalSurfaces=(Type=SurfaceType13,Name="Water")
+DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
+ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
 
 
