fix physics object's, and move through the portal with physics

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -178,7 +178,7 @@ SimulateScratchMemorySize=262144
 RagdollAggregateThreshold=4
 TriangleMeshTriangleMinAreaThreshold=5.000000
 bEnableShapeSharing=False
-bEnablePCM=True
+bEnablePCM=False
 bEnableStabilization=False
 bWarnMissingLocks=True
 bEnable2DPhysics=False
@@ -190,9 +190,9 @@ FrictionCombineMode=Average
 RestitutionCombineMode=Average
 MaxAngularVelocity=3600.000000
 MaxDepenetrationVelocity=0.000000
-ContactOffsetMultiplier=0.020000
-MinContactOffset=2.000000
-MaxContactOffset=8.000000
+ContactOffsetMultiplier=0.010000
+MinContactOffset=0.000100
+MaxContactOffset=1.000000
 bSimulateSkeletalMeshOnDedicatedServer=True
 DefaultShapeComplexity=CTF_UseSimpleAndComplex
 bDefaultHasComplexCollision=True
@@ -206,7 +206,7 @@ bEnableEnhancedDeterminism=False
 AnimPhysicsMinDeltaTime=0.000000
 bSimulateAnimPhysicsAfterReset=False
 MaxPhysicsDeltaTime=0.033333
-bSubstepping=False
+bSubstepping=True
 bSubsteppingAsync=False
 MaxSubstepDeltaTime=0.016667
 MaxSubsteps=6
